--- a/my/templates/lineaBaseManager.html
+++ b/my/templates/lineaBaseManager.html
@@ -72,7 +72,7 @@
 					add : false,
 					del : false,
 					search : false,
-					refresh : false
+					refresh : true
 				});
 				grid.jqGrid('filterToolbar', {
 					stringResult : true,
