--- a/my/templates/solicitudCambioVotacion.html
+++ b/my/templates/solicitudCambioVotacion.html
@@ -103,6 +103,7 @@
 					{
 						name: 'voto',
 						index: 'voto',
+						search: false,
 						formatter : 'select',
 						stype : 'select',
 						editoptions : {
